--- a/style.css
+++ b/style.css
@@ -1,8 +1,87 @@
 html {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    min-height: 100vh;
-}
+    font-size: 10px;
+  }
+  
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+      font-size: 1.6rem;
+      line-height: 1.5;
+      text-align: center;
+      color: #333;
+      margin: 0;
+  }
+  
+  #main {
+    margin: 30px 8px;
+    padding: 15px;
+    border-radius: 5px;
+    background: #eee;
+  }
+  
+  h1 {
+    margin-bottom: 0;
+    display: block;
+    font-size: 4rem;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+  }
+  
+  h3 {
+      display: block;
+      font-size: 1.17em;
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+      font-weight: bold;
+  }
+  
+  p {
+      display: block;
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+  }
+  
+  #img-div {
+      background: white;
+      padding: 10px;
+      margin: 0;
+  }
+  
+  img {
+      max-width: 100%;
+      display: block;
+      height: auto;
+      margin: 0 auto;
+  }
+  
+  #img-caption {
+      margin: 15px 0 5px 0;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: normal;
+  }
+  
+  ul {
+      list-style-type: disc;
+      max-width: 550px;
+      margin: 0 auto 50px auto;
+      text-align: left;
+      line-height: 1.6;
+  }
+  
+  li {
+      display: list-item;
+      text-align: -webkit-match-parent;
+      margin: 16px 0;
+  }
+  
+  #tribute-info {
+      margin: 50px 0;
+      text-align: center;
+  }
